[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pajgps-api"
version = "0.1.0"
description = "A Python library to interact with the PAJ GPS API."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["paj", "gps", "api", "tracker"]
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pajgps-api"
Issues = "https://github.com/yourusername/pajgps-api/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pajgps_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
