[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pajgps-api"
version = "0.3.0"
description = "A Python library to interact with the PAJ GPS API."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["paj", "gps", "api", "tracker"]
authors = [
    { name = "Skipperro", email = "skipperro@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/skipperro/pajgps-api"
Issues = "https://github.com/skipperro/pajgps-api/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pajgps_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
